--- a/My Resume.html
+++ b/My Resume.html
@@ -34,11 +34,11 @@
 							<h2 class="resume-name mb-0 text-uppercase">Naveenkumar Adi Raman</h2>
 							<div class="resume-tagline mb-3 mb-md-0">Graduate Student at University of Montreal</div>
 						</div><!--//resume-title-->
-						<div class="resume-contact col-12 col-md-6 col-lg-4 col-xl-3">
+						<div class="resume-contact col-11 col-md-5 col-lg-3 col-xl-3">
 							<ul class="list-unstyled mb-0">
 								<li class="mb-2"><i class="fas fa-phone-square fa-fw fa-lg mr-2 "></i><a class="resume-link" href="tel:#">0438 9797 869</a></li>
-								<li class="mb-2"><i class="fas fa-envelope-square fa-fw fa-lg mr-2"></i><a class="resume-link" href="mailto:#">naveenkumar.adi.raman@umontreal.ca</a></li>
-								<li class="mb-2"><i class="fas fa-globe fa-fw fa-lg mr-2"></i><a class="resume-link" href="#">www.yourwebsite.com</a></li>
+								<li class="mb-1"><i class="fas fa-envelope-square fa-fw fa-lg mr-2"></i><a class="resume-link" href="mailto:#">ar.naveenkumar94@gmail.com</a></li>
+								<li class="mb-2"><i class="fas fa-globe fa-fw fa-lg mr-2"></i><a class="resume-link" href="#">https://naveenkumar.github.io/</a></li>
 								<li class="mb-0"><i class="fas fa-map-marker-alt fa-fw fa-lg mr-2"></i>Montreal</li>
 							</ul>
 						</div><!--//resume-contact-->
