--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 								<h3 class="text-uppercase resume-section-heading mb-4">Academic projects</h3>
 									<div class="item">
 									<div class="item-heading row align-items-center mb-2">
-										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Blockchain-based Digital Certification and Certication Revocation. </h4>
+										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Blockchain-based Digital Certification and Certification Revocation. </h4>
 										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-left text-md-right">04/19</div>	
 									</div>
 									<div class="item-content">
