--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 								<h3 class="text-uppercase resume-section-heading mb-4">Academic projects</h3>
 									<div class="item">
 									<div class="item-heading row align-items-center mb-2">
-										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Blockchain-based Digital Certification and Certification Revocation. </h4>
+										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Blockchain-based Digital Certification and Certification Revocation, University of Montreal</h4>
 										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-left text-md-right">04/19</div>	
 									</div>
 									<div class="item-content">
@@ -101,7 +101,7 @@
 								</div><!--//item-->
 								<div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
-										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Facial expression recognition using Convolutional Neural Networks</h4>
+										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Facial expression recognition using Convolutional Neural Networks, University of Montreal</h4>
 										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-left text-md-right">12/18</div>	
 									</div>
 									<div class="item-content">
@@ -135,10 +135,10 @@
 							<section class="certification section py-3">
 								<h3 class="text-uppercase resume-section-heading mb-4">Certifications</h3>
 										<ul class="resume-list">
-											<li><b>Dataset:</b> CK+ Dataset </li>
-    											<li><b>Test accuracy:</b> 88.97%</li>
-											<li><b>Tools:</b> Spyder IDE, Google Colab.</li>
-											<li> <b>Project link:</b> <a href="#" class="theme-link">https://github.com/arnaveenkumar/mlproj</a></li>
+											<li>Certified EMC Academic Associate, EMC Cloud Infrastructure and Services </li>
+    											<li>Artificial Intelligece Planning, University of Edinburgh</li>
+											<li>Business English Level B1, University of Cambridge</li>
+											<li>French Level 1, Here and Now-The French Institute</li>
 										</ul>
 										
 							</section><!--//certification-section-->
