--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 					<div class="media flex-column flex-md-row align-items-center">
 						<img class="resume-profile-image mb-2 mb-md-2 mr-md-4 ml-md-4 rounded mx-auto" src="assets/images/IMG_20181229_110322.jpg" alt="image">
 						<div class="media-body text-left">
-							<p class="mb-0">Focusing on the areas like Data Science and Machine learning</p>
+							<p class="mb-0">I am an individual contributor has a passion to learn and work on the new technologies which would shape my professional career. My previous professional experience gave me an exposure to work in teams which helped me to improve my communication and decision-making skills. Interests in Artificial Intelligence motivated me to pursue a Masters in Computer Science at the University of Montreal. Some of my coursework includes Data Science, Machine Learning, Deep Learning, and Blockchain. My previous work and current academic experience build confidence in me to look for an opportunity to expand my skills and interests in related areas.  </p>
 						</div><!--//media-body-->
 					</div>
 				</div><!--//resume-intro-->
@@ -74,8 +74,8 @@
 										<ul class="resume-list">
 											<li>Modified the existing project and developed a proposed application with required changes. </li>
 											<li>Tested in real-time environment.</li>
-											<li>Conducted several code reviews.</li>
-											<li>Worked as a team to provide technical details.</li>
+											<li>Conducted several code reviews to make it a bug-free application.</li>
+											<li>Worked on a team in designing the technical details.</li>
                      										<li><b>Languages used:</b>C#.NET, SQL, HTML, CSS3.</li>
 										</ul>
 									</div>
@@ -146,7 +146,7 @@
 								<h3 class="text-uppercase resume-section-heading mb-4">Volunteer experience</h3>
 								<div class="item mb-3">
 									<div class="item-content">
-										<p>Worked as a 'Flood relief volunteer' to help flood victims during Dec' 2015 South Indian floods. Organized medical camp for the affected communities..</p>
+										<p>Worked as a 'Flood relief volunteer' to help flood victims during Dec' 2015 South Indian floods. Organized medical camp for the affected communities.</p>
 											
 									</div>
 								</div><!--//item-->
