--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
 										<li class="mb-2">JavaScript/CSS/Bootstrap/HTML</li>
 											<li class="mb-2">Node JS/ASP.NET</li>
 											<li class="mb-2">SQL/MySQL</li>
+										        <li class="mb-2">Experience in Git and GitHub</li>
 											<li class="mb-2">Data Structures and Algorithms</li>
 											<li class="mb-2">Data Analysis, Preprocessing and Visualization</li>
 											<li>Train and test Machine Learning models</li>
