--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 								<li class="mb-2"><i class="fas fa-phone-square fa-fw fa-lg mr-2 "></i><a class="resume-link" href="tel:#">0438 9797 869</a></li>
 								<li class="mb-1"><i class="fas fa-envelope-square fa-fw fa-lg mr-2"></i><a class="resume-link" href="mailto:#">ar.naveenkumar94@gmail.com</a></li>
 								<li class="mb-2"><i class="fas fa-globe fa-fw fa-lg mr-2"></i><a class="resume-link" href="#">arnaveenkumar.github.io/cv/</a></li>
-								<li class="mb-0"><i class="fas fa-map-marker-alt fa-fw fa-lg mr-2"></i>Montreal</li>
+								<li class="mb-0"><i class="fas fa-map-marker-alt fa-fw fa-lg mr-2"></i>Montreal, QC, Canada</li>
 							</ul>
 						</div><!--//resume-contact-->
 					</div><!--//row-->
