--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 					<div class="media flex-column flex-md-row align-items-center">
 						<img class="resume-profile-image mb-2 mb-md-2 mr-md-4 ml-md-4 rounded mx-auto" src="assets/images/IMG_20181229_110322.jpg" alt="image">
 						<div class="media-body text-left">
-							<p class="mb-0">I am an individual contributor has a passion to learn and work on the new technologies which would shape my professional career. My previous professional experience gave me an exposure to work in teams which helped me to improve my communication and decision-making skills. Interests in Artificial Intelligence motivated me to pursue a Masters in Computer Science at the University of Montreal. Some of my coursework includes Data Science, Machine Learning, Deep Learning, and Blockchain. My previous work and current academic experience build confidence in me to look for an opportunity to expand my skills and interests in related areas.  </p>
+							<p class="mb-0">I am an individual contributor has a passion to learn and work on the new technologies which would shape my professional career. My previous professional experience gave me an exposure to work in teams which helped me to improve my communication and decision-making skills. Interests in Artificial Intelligence motivated me to pursue a Masters in Computer Science at the University of Montreal. Some of my coursework includes Data Science, Machine Learning, Deep Learning, and Blockchain. My previous work and current academic experience built confidence in me to look for an opportunity to expand my skills and interests in related areas.  </p>
 						</div><!--//media-body-->
 					</div>
 				</div><!--//resume-intro-->
@@ -92,7 +92,7 @@
 										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-left text-md-right">04/19</div>	
 									</div>
 									<div class="item-content">
-										<p>The proposed work is to maintain a list of transaction detailof certificate revocation and granting verifier ability to view all the versions of a revoked certificate and preserving the simplicity of multiple certificate verification at verifier application. </p>
+										<p>The proposed work is to maintain a list of transaction details of certificate revocation and granting verifier ability to view all the versions of a revoked certificate and preserving the simplicity of multiple certificate verification at verifier application. </p>
 										<ul class="resume-list">
 											<li><b>Tools:</b> Ubuntu command-line terminal, Ropsten Ethereum TestNet and IPFS Linux package.</li>
 											<li> <b>Project link:</b> <a href="#" class="theme-link">https://github.com/arnaveenkumar/blockchain_cert</a></li>
