--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 									<div class="item-heading row align-items-center mb-2">
 										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Programmer Analyst Trainee</h4>
 										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-left text-md-right"> 08/15 - 01/16</div>
-										<h5 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Cognizant, IND</h5>
+										<h5 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Cognizant, India</h5>
 										
 										
 									</div>
