--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 										<p>The proposed work is to maintain a list of transaction details of certificate revocation and granting verifier ability to view all the versions of a revoked certificate and preserving the simplicity of multiple certificate verification at verifier application. </p>
 										<ul class="resume-list">
 											<li><b>Tools:</b> Ubuntu command-line terminal, Ropsten Ethereum TestNet and IPFS Linux package.</li>
-											<li> <b>Project link:</b> <a href="#" class="theme-link">https://github.com/arnaveenkumar/blockchain_cert</a></li>
+											<li> <b>Project link:</b> <a href="https://github.com/arnaveenkumar/blockchain_cert" class="theme-link">https://github.com/arnaveenkumar/blockchain_cert</a></li>
 										</ul>
 									</div>
 								</div><!--//item-->
@@ -110,7 +110,7 @@
 											<li><b>Dataset:</b> CK+ Dataset </li>
     											<li><b>Test accuracy:</b> 88.97%</li>
 											<li><b>Tools:</b> Spyder IDE, Google Colab.</li>
-											<li> <b>Project link:</b> <a href="#" class="theme-link">https://github.com/arnaveenkumar/mlproj</a></li>
+											<li> <b>Project link:</b> <a href="https://github.com/arnaveenkumar/mlproj" class="theme-link">https://github.com/arnaveenkumar/mlproj</a></li>
 										</ul>
 										
 									</div>
@@ -126,7 +126,7 @@
 											<li><b>Dataset:</b> Human-drawn images dataset.</li>
     											<li><b>Test accuracy:</b> 77.14%</li>
 											<li><b>Tools:</b> Spyder IDE, Google Colab.</li>
-											<li> <b>Project link:</b> <a href="#" class="theme-link">https://www.kaggle.com/c/ift3395-6390-f2018</a></li>
+											<li> <b>Project link:</b> <a href="https://www.kaggle.com/c/ift3395-6390-f2018" class="theme-link">https://www.kaggle.com/c/ift3395-6390-f2018</a></li>
 										</ul>
 									</div>
 								</div><!--//item-->
