--- a/index.html
+++ b/index.html
@@ -134,13 +134,14 @@
 							</section><!--//project-section-->
 							<section class="certification section py-3">
 								<h3 class="text-uppercase resume-section-heading mb-4">Certifications</h3>
+										<div class="item-content">
 										<ul class="resume-list">
 											<li>Certified EMC Academic Associate, EMC Cloud Infrastructure and Services </li>
     											<li>Artificial Intelligece Planning, University of Edinburgh</li>
 											<li>Business English Level B1, University of Cambridge</li>
 											<li>French Level 1, Here and Now-The French Institute</li>
 										</ul>
-										
+										</div><!--//item-->
 							</section><!--//certification-section-->
 							<section class="project-section py-3">
 								<h3 class="text-uppercase resume-section-heading mb-4">Volunteer experience</h3>
