--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 							<ul class="resume-social-list list-inline mx-auto mb-0 d-inline-block text-muted">
 								<li class="list-inline-item mb-lg-0 mr-3"><a href="https://github.com/arnaveenkumar"><i class="fab fa-github-square fa-2x mr-2" data-fa-transform="down-4"></i><span class="d-none d-lg-inline-block text-muted">github.com/arnaveenkumar</span></a></li>
 								<li class="list-inline-item mb-lg-0 mr-3"><a href="https://linkedin.com/in/naveen99"><i class="fab fa-linkedin fa-2x mr-2" data-fa-transform="down-4"></i><span class="d-none d-lg-inline-block text-muted">linkedin.com/in/naveen99</span></a></li>
-								<li class="list-inline-item mb-lg-0 mr-lg-3"><a href="https://twitter.com/godsgreat99"><i class="fab fa-twitter-square fa-2x mr-2" data-fa-transform="down-4"></i><span class="d-none d-lg-inline-block text-muted">@godsgreat99</span></a></li>
+								<li class="list-inline-item mb-lg-0 mr-3"><a href="https://twitter.com/godsgreat99"><i class="fab fa-twitter-square fa-2x mr-2" data-fa-transform="down-4"></i><span class="d-none d-lg-inline-block text-muted">@godsgreat99</span></a></li>
 							</ul>
 						</div><!--//resume-footer-->
 					</article>
