--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 						</div><!--//resume-title-->
 						<div class="resume-contact col-11 col-md-5 col-lg-3 col-xl-3">
 							<ul class="list-unstyled mb-0">
-								<li class="mb-2"><i class="fas fa-phone-square fa-fw fa-lg mr-2 "></i><a class="resume-link" href="tel:#">0438 9797 869</a></li>
-								<li class="mb-1"><i class="fas fa-envelope-square fa-fw fa-lg mr-2"></i><a class="resume-link" href="mailto:ar.naveenkumar94@gmail.com">ar.naveenkumar94@gmail.com</a></li>
-								<li class="mb-2"><i class="fas fa-globe fa-fw fa-lg mr-2"></i><a href="arnaveenkumar.github.io/cv/">arnaveenkumar.github.io/cv/</a></li>
+								<li class="mb-2"><i class="fas fa-phone-square fa-fw fa-lg mr-2 "></i><a href="tel:#">0438 9797 869</a></li>
+								<li class="mb-1"><i class="fas fa-envelope-square fa-fw fa-lg mr-2"></i><a href="mailto:ar.naveenkumar94@gmail.com">ar.naveenkumar94@gmail.com</a></li>
+								<li class="mb-2"><i class="fas fa-globe fa-fw fa-lg mr-2"></i><a href="https://arnaveenkumar.github.io/cv/">arnaveenkumar.github.io/cv/</a></li>
 								<li class="mb-0"><i class="fas fa-map-marker-alt fa-fw fa-lg mr-2"></i>Montreal, QC, Canada</li>
 							</ul>
 						</div><!--//resume-contact-->
