--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 					<div class="media flex-column flex-md-row align-items-center">
 						<img class="resume-profile-image mb-2 mb-md-2 mr-md-4 ml-md-4 rounded mx-auto" src="assets/images/IMG_20181229_110322.jpg" alt="image">
 						<div class="media-body text-left">
-							<p class="mb-0">I am an individual contributor has a passion to learn and work on the new technologies which would shape my professional career. My previous professional experience gave me an exposure to work in teams which helped me to improve my communication and decision-making skills. Interests in Artificial Intelligence motivated me to pursue a Masters in Computer Science at the University of Montreal. Some of my coursework includes Data Science, Machine Learning, Deep Learning, and Blockchain. My previous work and current academic experience built confidence in me to look for an opportunity to expand my skills and interests in related areas.  </p>
+							<p class="mb-0">I am a knowledge seeker has a passion to learn and work on the new technologies which would shape my professional career. My previous professional experience gave me an exposure to work in teams which helped me to improve my communication and decision-making skills. Interests in Artificial Intelligence motivated me to pursue a Masters in Computer Science at the University of Montreal. Some of my coursework includes Data Science, Machine Learning, Deep Learning, and Blockchain. My previous work and current academic experience built confidence in me to look for an opportunity to expand my skills and interests in related areas.  </p>
 						</div><!--//media-body-->
 					</div>
 				</div><!--//resume-intro-->
