--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					<div class="media flex-column flex-md-row align-items-center">
 						<img class="resume-profile-image mb-2 mb-md-2 mr-md-4 ml-md-4 rounded mx-auto" src="assets/images/IMG_20181229_110322.jpg" alt="image">
 						<div class="media-body text-left">
-							<p class="mb-0">I am a self-motivated professional has a passion to learn and work on the new technologies which would shape my professional career. Being a team player in my previous work gave me an exposure to work in teams which helped me to improve my interpersonal skills. Right from my bachelors, I showed great zeal in exploring the topics in AI which motivated me to motivated me to pursue a Masters in Computer Science at the University of Montreal. Some of my coursework includes Data Science, Machine Learning, Deep Learning, and Blockchain. My previous work and current academic experience built confidence in me to look for an opportunity to expand my skills and interests in related areas.  </p>
+							<p class="mb-0">I am a self-motivated professional has a passion to learn and work on the new technologies which would shape my professional career. Being a team player in my previous work gave me an exposure to work in teams which helped me in improving my interpersonal skills. Right from my bachelors, I showed great zeal in exploring the topics in AI which motivated me to motivated me to pursue a Masters in Computer Science at the University of Montreal. Some of my coursework includes Data Science, Machine Learning, Deep Learning, and Blockchain. My previous work and academic background built confidence in me to look for an opportunity to expand my skills and interests in related areas.</p>
 						</div><!--//media-body-->
 					</div>
 				</div><!--//resume-intro-->
